0.8.0 - currently working on
- [#5104] Bufix: E-Mail attachments with file name with content from memory are read from disk
- [#5103] Bugfix: TestingFramework::cleanUp needs to discard stored e-mails
- [#5100] Feature: Add convenience function for accessing sent SwiftMails
- [#4283] Feature: Delegate to SwiftMailer
- [#5099] Cleanup: Move the require calls to inside methods
- [#5093] Bugfix: Dependency error message about Emogrifier when installing in 6.2
- [#4867] Cleanup: Use the new copyright headers
- [#5092] Feature: Add functions for moving a Geo element
- [#4910] Change: Update Emogrifier to the latest version
- [#5033] Cleanup: Move Interface/ to Classes/Interface/
- [#5034] Cleanup: Move Mapper/ to Classes/Mapper/
- [#5035] Cleanup: Move Model/ to Classes/Model/
- [#5036] Cleanup: Move ViewHelper/ to Classes/ViewHelper/
- [#5037] Cleanup: Move Visibility/ to Classes/Visibility/
- [#5081] Fix: Test crash in Tx_Oelib_TestingFrameworkTest in TYPO3 CMS 6.2 if activateContentAdapter is set
- [#5082] Fix: Missing TSFE renderCharset leads to PHP warnings, thanks to Nicole Cordes
- [#5079] Change: Add dependencies for the test extensions
- [#5078] Fix: Don't use NULL as third parameter in mb_substr
- [#4649] Fix: Also recognize first/last name for current TYPO3 versions
- [#5059] Fix: Test errors in Tx_Oelib_TestingFrameworkTest in 6.2
- [#5058] Fix: Test errors in Tx_Oelib_FrontEndLoginManagerTest in 6.2
- [#5040] Fix: Allow access to public resource files and the manual again
- [#4840] Change: Drop workspace and localization fields from oelib
- [#5032] Cleanup: Move Geocoding/ to Classes/Geocoding/
- [#5031] Cleanup: Move Exception/ to Classes/Exception/
- [#5029] Cleanup: Move the TCA to Configuration/TCA/
- [#5030] Cleanup: Move locallang_db.xml to Resources/Private
- [#5041] Cleanup: Move the common constants file to Classes/
- [#5028] Cleanup: Move the icon to Resources/Public
- [#5020] Fix: Error message: The extension CSS Styled Content is not loaded